# faultline

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Faultline_Agent_Project_Specification.txt  LICENSE  Makefile  README.md  ROADMAP.md  TraceAtlas_Agent_Project_Specification.txt
.github/workflows/: ci.yml
apps/faultline-cli/: Cargo.toml
apps/faultline-cli/src/: main.rs
apps/faultline-replay/: Cargo.toml
apps/faultline-replay/src/: main.rs
apps/faultlined/: Cargo.toml
apps/faultlined/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  sessions.rs  websocket.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: incident.rs  labels.rs  lib.rs  manifest.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  event.rs  ids.rs  lib.rs  time.rs
crates/engine/: Cargo.toml
crates/engine/benches/: batch_sizes.rs
crates/engine/src/: heatmap_pipeline.rs  lib.rs  message.rs  operator.rs  runtime.rs
crates/engine/src/operators/: aggregate.rs  filter.rs  heatmap_sink.rs  mod.rs  project.rs  window.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs  service_graph.rs  trace_graph.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: batcher.rs  lib.rs  watermark.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs
crates/projection/: Cargo.toml
crates/projection/src/: heatmap.rs  lib.rs  protocol.rs  timeline.rs  topology.rs  trace.rs
crates/replay/: Cargo.toml
crates/replay/src/: clock.rs  controls.rs  disorder.rs  lib.rs  reader.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
datasets/: README.md
datasets/fixtures/synthetic-ob/v1/rec-mem-001/: labels.json  manifest.json
datasets/fixtures/synthetic-ob/v1/rec-mem-001/changes/: part-00000.parquet
datasets/fixtures/synthetic-ob/v1/rec-mem-001/logs/: part-00000.parquet
datasets/fixtures/synthetic-ob/v1/rec-mem-001/metrics/: part-00000.parquet
datasets/fixtures/synthetic-ob/v1/rec-mem-001/spans/: part-00000.parquet
datasets/manifests/: rcaeval.yaml
docs/adr/: 0001-rust-backend.md  0002-arrow-record-batches.md  0003-event-time-model.md  0004-single-process-backend.md  0005-rcaeval-first-dataset.md  0006-no-datafusion-executor.md  0007-cytoscape-topology.md  0009-watermark-policy.md  0010-idle-partitions.md  0011-arrow-signal-schemas.md  0012-bounded-operator-channels.md  0013-window-revisions.md  0014-dual-projection-modes.md
docs/architecture/: data-flow.md  streaming-semantics.md  visualization-contracts.md
docs/audits/: M2_COMPLETION_AUDIT.md  M3_EVENT_TIME_CORE_AUDIT.md  M3_LOCAL_PRODUCT_REVIEW.md
docs/references/: rcaeval-audit.md
python/: pyproject.toml
python/faultline_data/: __init__.py  generate_fixture.py  validate.py
python/faultline_data/adapters/: rcaeval.py
python/tests/: test_validate.py  test_version.py
scripts/: run-demo.ps1  run-demo.sh
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: m2-shell.spec.ts
web/src/: smoke.test.ts  styles.css
web/src/api/: client.ts
web/src/app/: App.tsx
web/src/state/: investigation.test.ts  investigation.ts
web/src/types/: protocol.ts
web/src/views/AnomalyHeatmap/: AnomalyHeatmap.tsx
web/src/views/IncidentTimeline/: IncidentTimeline.tsx
web/src/views/RuntimeInspector/: RuntimeInspector.tsx
web/src/views/ServiceMap/: ServiceMap.tsx
web/src/views/TraceWaterfall/: TraceWaterfall.tsx
