[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/catalog",
    "crates/ingest",
    "crates/planner",
    "crates/engine",
    "crates/state",
    "crates/graph",
    "crates/inference",
    "crates/projection",
    "crates/api",
    "crates/replay",
    "crates/cli",
    "apps/faultlined",
    "apps/faultline-replay",
    "apps/faultline-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Anush Sonone"]

[workspace.dependencies]
faultline-common = { path = "crates/common" }
faultline-catalog = { path = "crates/catalog" }
faultline-ingest = { path = "crates/ingest" }
faultline-planner = { path = "crates/planner" }
faultline-engine = { path = "crates/engine" }
faultline-state = { path = "crates/state" }
faultline-graph = { path = "crates/graph" }
faultline-inference = { path = "crates/inference" }
faultline-projection = { path = "crates/projection" }
faultline-api = { path = "crates/api" }
faultline-replay = { path = "crates/replay" }
faultline-cli = { path = "crates/cli" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
arrow = { version = "58", default-features = false, features = ["json", "prettyprint"] }
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }

[profile.dev]
opt-level = 0

[profile.release]
lto = false
