[project]
name = "faultline-data"
version = "0.1.0"
description = "Offline dataset adapters and validators for Faultline"
requires-python = ">=3.11"
dependencies = [
  "pyarrow>=18",
  "pandas>=2.2",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["faultline_data*"]
