[package]
name = "faultline-cli-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "faultline-cli"
path = "src/main.rs"

[dependencies]
faultline-cli = { workspace = true }
faultline-common = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
