[package]
name = "faultlined"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "faultlined"
path = "src/main.rs"

[dependencies]
faultline-api = { workspace = true }
faultline-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
