[package]
name = "faultline-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
faultline-common = { workspace = true }
faultline-catalog = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
